--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/3hGEnick.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.libs-substance_laf_7.3=libs/substance_laf_7.3
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.3GE.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.libs-substance_laf_7.3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
