--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -35,13 +36,15 @@ jar.compress=false
 javac.classpath=\
     ${libs.3GE.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.libs-substance_laf_7.3}
+    ${file.reference.libs-substance_laf_7.3}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
