--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,14 +30,19 @@ dist.jar=${dist.dir}/3hGEnick.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.libs-substance_laf_7.3=libs/substance_laf_7.3
+file.reference.laf-plugin-7.3.jar=libs/substance_laf_7.3/laf-plugin-7.3.jar
+file.reference.laf-widget-7.3.jar=libs/substance_laf_7.3/laf-widget-7.3.jar
+file.reference.substance-7.3.jar=libs/substance_laf_7.3/substance-7.3.jar
+file.reference.trident-7.3-swing.jar=libs/substance_laf_7.3/trident-7.3-swing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.3GE.classpath}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.libs-substance_laf_7.3}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.laf-plugin-7.3.jar}:\
+    ${file.reference.laf-widget-7.3.jar}:\
+    ${file.reference.substance-7.3.jar}:\
+    ${file.reference.trident-7.3-swing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
